# train-of-thoughts

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: BUILD_LOG.md  CHALLENGES.md  QUESTION_ANSWER.md  WORKING_AGREEMENT.md
docs/architecture/: PROJECT_BRIEF.md
tot-backend/: TOT_BACKEND.md  pyproject.toml
tot-backend/app/: config.py  main.py
tot-backend/app/api/: auth.py  deps.py  health.py  tags.py  thoughts.py
tot-backend/app/db/: pool.py  tags.py  thoughts.py
tot-backend/app/schemas/: auth.py  tag.py  thought.py
tot-backend/app/services/: auth.py
tot-backend/tests/: conftest.py  test_auth.py  test_db_functions.py  test_health.py  test_thoughts_api.py
tot-db/: TOT_DB.md
tot-db/migrations/: 001_schema.sql  002_tables.sql  003_roles_grants.sql  004_functions.sql  005_function_grants.sql
tot-db/scripts/: migrate.sh
tot-frontend/: .env.example  TOT_FRONTEND.md  index.html  package-lock.json  package.json
tot-frontend/src/: App.jsx
tot-frontend/src/api/: client.js
tot-frontend/src/components/: HealthCheck.jsx  Layout.jsx
tot-frontend/src/pages/: HealthPage.jsx  HomePage.jsx  PlaceholderPage.jsx
tot-frontend/src/styles/: base.css  index.css  layouts.css  theme.css
tot-frontend/src/styles/components/: buttons.css  cards.css  feedback.css  forms.css  health.css  tags.css
