[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tot-backend"
version = "0.1.0"
description = "Train of Thoughts API"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]",    
    "asyncpg==0.31.0",
    "pydantic-settings==2.14.2",
    "PyJWT==2.13.0",
    "passlib[bcrypt]==1.7.4",

]

[project.optional-dependencies]
dev = [
    "httpx==0.28.1",
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
